{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 293,
  "lineage": "cb2afa7e-539a-8cad-f7a9-bbd990791b6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002f93752ad93f105",
            "arn": "arn:aws:ec2:us-east-1:961653683111:elastic-ip/eipalloc-002f93752ad93f105",
            "association_id": "eipassoc-013edf903bafa8ad6",
            "domain": "vpc",
            "id": "eipalloc-002f93752ad93f105",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04a0887af53f2bd64",
            "private_dns": "ip-192-168-51-190.ec2.internal",
            "private_ip": "192.168.51.190",
            "public_dns": "ec2-34-198-188-32.compute-1.amazonaws.com",
            "public_ip": "34.198.188.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee29448abb58fce1",
            "arn": "arn:aws:ec2:us-east-1:961653683111:elastic-ip/eipalloc-0ee29448abb58fce1",
            "association_id": "eipassoc-0b46e41871f534aa4",
            "domain": "vpc",
            "id": "eipalloc-0ee29448abb58fce1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d9fcbf2b46a4e180",
            "private_dns": "ip-192-168-93-112.ec2.internal",
            "private_ip": "192.168.93.112",
            "public_dns": "ec2-54-225-154-23.compute-1.amazonaws.com",
            "public_ip": "54.225.154.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:internet-gateway/igw-0ecb2a743a6b36428",
            "id": "igw-0ecb2a743a6b36428",
            "owner_id": "961653683111",
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002f93752ad93f105",
            "association_id": "eipassoc-013edf903bafa8ad6",
            "connectivity_type": "public",
            "id": "nat-0818957d503f203b5",
            "network_interface_id": "eni-04a0887af53f2bd64",
            "private_ip": "192.168.51.190",
            "public_ip": "34.198.188.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02466bbbe855a134e",
            "tags": {
              "Name": "eks-NatGatewayAZ1"
            },
            "tags_all": {
              "Name": "eks-NatGatewayAZ1"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee29448abb58fce1",
            "association_id": "eipassoc-0b46e41871f534aa4",
            "connectivity_type": "public",
            "id": "nat-0ecd4be9ad4aff904",
            "network_interface_id": "eni-0d9fcbf2b46a4e180",
            "private_ip": "192.168.93.112",
            "public_ip": "54.225.154.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa1729b25ac7103b",
            "tags": {
              "Name": "eks-NatGatewayAZ2"
            },
            "tags_all": {
              "Name": "eks-NatGatewayAZ2"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf5ad30ac008deba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0818957d503f203b5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf5ad30ac008deba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private01",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06d6ea973130099731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ecd4be9ad4aff904",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06d6ea97313009973",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private02",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ecb2a743a6b36428",
            "id": "r-rtb-035c74ba894e7584a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035c74ba894e7584a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-0bf5ad30ac008deba",
            "id": "rtb-0bf5ad30ac008deba",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0818957d503f203b5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet AZ1",
              "Network": "Private01"
            },
            "tags_all": {
              "Name": "Private Subnet AZ1",
              "Network": "Private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-06d6ea97313009973",
            "id": "rtb-06d6ea97313009973",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ecd4be9ad4aff904",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Subnet AZ2",
              "Network": "Private02"
            },
            "tags_all": {
              "Name": "Private Subnet AZ2",
              "Network": "Private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-035c74ba894e7584a",
            "id": "rtb-035c74ba894e7584a",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecb2a743a6b36428",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "tags_all": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085cde55ca62ec582",
            "route_table_id": "rtb-0bf5ad30ac008deba",
            "subnet_id": "subnet-0c21efee31458d434"
          },
          "dependencies": [
            "aws_route_table.private01",
            "aws_subnet.private_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0666df7c54f6de2c8",
            "route_table_id": "rtb-06d6ea97313009973",
            "subnet_id": "subnet-00a4fa621a3fabf9e"
          },
          "dependencies": [
            "aws_route_table.private02",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea052d7e33133c7",
            "route_table_id": "rtb-035c74ba894e7584a",
            "subnet_id": "subnet-02466bbbe855a134e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8009704cb2b3c5c",
            "route_table_id": "rtb-035c74ba894e7584a",
            "subnet_id": "subnet-0fa1729b25ac7103b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:security-group/sg-0d663355b3d43a5b3",
            "description": "Cluster communication with worker nodes",
            "egress": [],
            "id": "sg-0d663355b3d43a5b3",
            "ingress": [],
            "name": "eks-control-plane-20241112225227742700000002",
            "name_prefix": "eks-control-plane-",
            "owner_id": "961653683111",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-0c21efee31458d434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c21efee31458d434",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PrivateSubnet01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-PrivateSubnet01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-00a4fa621a3fabf9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a4fa621a3fabf9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PrivateSubnet02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-PrivateSubnet02",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-02466bbbe855a134e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02466bbbe855a134e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PublicSubnet01",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-PublicSubnet01",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-0fa1729b25ac7103b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa1729b25ac7103b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-PublicSubnet02",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-PublicSubnet02",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cc6e8751cb79c5fb"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:vpc/vpc-0cc6e8751cb79c5fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00ce116b77916d963",
            "default_route_table_id": "rtb-0c7f2216d70dd7a49",
            "default_security_group_id": "sg-08a798af57b78e90f",
            "dhcp_options_id": "dopt-0d8e2277",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc6e8751cb79c5fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7f2216d70dd7a49",
            "owner_id": "961653683111",
            "tags": {
              "Name": "eks-VPC"
            },
            "tags_all": {
              "Name": "eks-VPC"
            }
          }
        }
      ]
    }
  ]
}